[2021-12-15]
- Complete rewrite started.

[2021-12-16]
- Added Cactus Apple to the loot table of Mottled Boar for the quest Galgar's Cactus Apple Surprise.
- Added Cactus Apple to the tooltip of Mottled Boar while the quest is active.
- Changed the flags of Cactus Apple to allow every member of a group to loot it.

- Added Sack of Supplies to the loot table of Dustwind Harpy and Dustwind Pillager for the quest Winds in the Desert.
- Added Sack of Supplies to the tooltip of Dustwind Harpy and Dustwind Pillager while the quest is active.
- Changed the flags of Sack of Supplies to allow every member of a group to loot it.

[2021-12-17]
- Added Fungal Spores to the loot table of Oasis Snapjaw for the quest Fungal Spores.
- Added Fungal Spores to the tooltip of Oasis Snapjaw while the quest is active.
- Changed the flags of Fungal Spores to allow every member of a group to loot it.

[2021-12-18]
- Changed the flags of Charred Razormane Wand to allow every member of a group to loot it.
- Changed the flags of Razormane Backstabber to allow every member of a group to loot it.
- Changed flags of Razormane War Shield to allow every member of a group to loot it.

- Changed the respawn time of Alien Egg.

- Added Highperch Wyvern Egg to the loot table of Highperch Wyvern for the quest Wind Rider.
- Added Highperch Wyvern Egg to the tooltip of Highperch Wyvern while the quest is active.
- Changed flags of Highperch Wyvern Egg to allow every member of a group to loot it.

[2021-12-20]
- Added Venomhide Ravasaur Egg to the loot table of Venomhide Ravasaur for the quest Venomhide Eggs.
- Changed flags of Venomhide Ravasaur Egg to allow every member of a group to loot it.